# Big-Homie

./: .coverage  .env.example  .gitignore  AUTONOMOUS_GUIDE.md  CHANGELOG.md  Caddyfile  README.md  abilities_registry.py  agent_profiles.py  autonomous_loop.py  browser_skill.py  cognitive_core.py  config.py  content_factory.py  content_utils.py  context_manager.py  correction_ledger.py  cost_guards.py  cron_manager_widget.py  database_ops.py  document_intelligence.py  dream_system.py  environment_sensing.py  eslint.config.mjs  fact_metadata.py  finance_dashboard_widget.py  financial_settings_widget.py  free_api_stack.py  governance.py  gsd_dispatcher.py  gsd_queue.py  gsd_router.py  heartbeat.py  kairos_daemon.py  karpathy_methods.py  llm_gateway.py  log_review.py  main.py  marketing_dashboard_widget.py  mcp_integration.py  (+33 more)
.github/workflows/: ci.yml
.zscripts/: build.sh
big_homie/: __init__.py
big_homie/agents/: __init__.py
big_homie/core/: __init__.py
big_homie/memory/: __init__.py
big_homie/revenue/: __init__.py
big_homie/security/: __init__.py
big_homie/skills/: __init__.py
big_homie/tools/: __init__.py
docs/: README.md  SECURITY.md
docs/security/: SECURITY.md
docs/skills/: COMPETITIVE_FEATURES.md
integrations/: __init__.py  base_l2_integration.py  binance_integration.py  cloudflare_integration.py  coinbase_commerce_integration.py  draftkings_integration.py  google_cloud_integration.py  perplexity_integration.py  plaid_integration.py  prizepicks_integration.py  shopify_integration.py  stripe_integration.py  twilio_integration.py  vercel_integration.py
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActivityLog.tsx  AgentManager.tsx  AgentUploadModal.tsx  AuditPanel.tsx  BuildView.tsx  CredentialsModal.tsx  Deliverables.tsx  EasyBuildProgress.tsx  EasyModeWizard.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GitHubPanel.tsx  ModeSwitcher.tsx  ModeViews.tsx  ParticleBackground.tsx  ProjectForm.tsx  SecurityDashboard.tsx  SecuritySettings.tsx  SettingsDrawer.tsx  ThemeToggle.tsx  Toast.tsx  ToolEcosystem.tsx  TrendingReposPanel.tsx  UpgradeSweepPanel.tsx  VenturesPanel.tsx
src/lib/: agent-persistence.ts  agent-runner.ts  claw-protect-bridge.ts  claw-protect-client.ts  (+12 more)
tests/: conftest.py
(+23 files in other folders)
