[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "big-homie"
version = "1.0.0"
description = "Autonomous AI agent with heartbeat, sub-agents, and MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "ncsound919"}
]
keywords = ["ai", "agent", "autonomous", "mcp", "llm"]

dependencies = [
  "anthropic>=0.25.0",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "chromadb>=0.5.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "supabase>=2.4.0",
  "sqlalchemy>=2.0.0",
  "aiofiles>=23.2.0",
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
]
finance = [
  "stripe>=9.0.0",
  "web3>=6.18.0",
]
media = [
  "pillow>=10.3.0",
  "pytesseract>=0.3.10",
]
chat = [
  "discord.py>=2.3.0",
  "slack-sdk>=3.27.0",
]
cloud = [
  "google-cloud-storage>=2.16.0",
  "google-cloud-bigquery>=3.21.0",
]
desktop = [
  "PyQt6>=6.7.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "bandit[toml]>=1.7.8",
  "pip-audit>=2.7.0",
  "mypy>=1.10.0",
]
all = [
  "big-homie[browser,finance,media,chat,cloud,desktop]",
]

[project.scripts]
big-homie = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["big_homie*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["big_homie", "."]
omit = [
  "tests/*",
  "*/migrations/*",
  ".venv/*",
  "node_modules/*",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
